@startuml
package "P Registro Miembros" #FFF2CC {
  class "FMiembro" as fmiembro {
  - MiembrosController miembrosController
  - modeloTabla:DefaultTableModel
  --
  -actualizarTabla():void
  -limpiarTabla(DefaultTableModel modelo)
  + getPanel(): JPanel
  }
  class "MiembrosController" as ctrmiembro{
  -MiembrosDAO miembrosDAO
  --
  +registrarNuevoMiembro(Miembros miembro): void
  +actualizarMiembro(Miembros miembro): void
  +obtenerMiembros() : List<Miembros>
  -esPersonaValida(Miembros miembros): boolean
  }

  class "MiembrosDAO" as daomiembro{
  --
  +agregarMiembro(Miembros miembros):void
  +obtenerMiembros(): List<Miembros>
  +obtenerMiembro(int id): Miembros
  +actualizarMiembro(Miembros miembros): void
  }

  class "BaseDAO" as daobase {
  --
  +obtenerConexion(): Connection
  +insertar(String tabla, Map<String, Object> campos): boolean
  +actualizar(String tabla, Map<String, Object> campos, String condicion): boolean
  +obtener(String tabla, String condicion, RowMapper<T> rowMapper): T
  +obtenerTodos(String tabla, RowMapper<T> rowMapper): List<T>
  +RowMapper<T>
  }
   class "ConexionBD" as bdconexion{
     -String CONFIG_FILE
     --
     +Connection establecerConexion()
    }
  entity "Miembros" as miembros{
     -Integer id
     -String nombre
     -String apellido
     -Date fecha_nacimiento
     -String genero
     -String direccion
     -String correo_electronico
     -String telefono
     -Date fecha_bautismo
     -Boolean asistio_culto
      +toString():String

  }

  fmiembro --> ctrmiembro
  ctrmiembro --> daomiembro
  daobase <|-- daomiembro
  ctrmiembro ..> miembros
  daomiembro ..> miembros
  daobase --> bdconexion
}


@enduml
